--- a/src/components/organisms/About/About.astro
+++ b/src/components/organisms/About/About.astro
@@ -1,53 +1,23 @@
 ---
 import { userData as data } from "@src/data/userData";
 import Title from "@atoms/Title/Title";
+import ButtonAbout from "@atoms/ButtonAbout/ButtonAbout.astro"
 ---
 
 <section class="about" id="about">
   <article class="about__container">
     <div class="about__profile">
-      <img
-        src={data.aboutPicture}
-        alt=""
-        class="profile__img"
-        width="100"
-        height="100"
-      />
-      <a
-        class="about__links about__links--cv"
-        href={data.cv}
-        class="link lin-cv"
-        target="_blank"
-      >
-        <iconify-icon
-          class="about__iconify"
-          icon="uil:arrow-up-left"
-          width="25"
-          height="25"></iconify-icon>
-        Download CV
-        <iconify-icon
-          class="about__iconify"
-          icon="iwwa:file-pdf"
-          width="25"
-          height="25"></iconify-icon>
-      </a>
-      <a
-        class="about__links about__links--email"
-        href=`mailto:${data.email}`
-        class="link lin-email"
-      >
-        <iconify-icon
-          class="about__iconify"
-          icon="uil:arrow-up-left"
-          width="25"
-          height="25"></iconify-icon>
-        email
-        <iconify-icon
-          class="about__iconify"
-          icon="material-symbols:mail"
-          width="25"
-          height="25"></iconify-icon>
-      </a>
+      <div class="profile__box">
+        <img
+          src={data.aboutPicture}
+          alt=""
+          class="profile__img"
+          width="100"
+          height="100"
+        />
+      </div>
+      <ButtonAbout data={data.cv}  text="Download cv" clase="cv"/>
+      <ButtonAbout data={data.cv}  text="email" clase="email"/>
     </div>
     <div class="about__content">
       <Title titleDesc="About Me" clase="title-dark" />
