--- a/src/components/organisms/About/_about.scss
+++ b/src/components/organisms/About/_about.scss
@@ -9,41 +9,25 @@
     @include centerFlex(space-around);
     .about__profile {
       position: relative;
-      .profile__img {
+      .profile__box{
         width: 37.9rem;
         height: 37.9rem;
-        object-fit: cover;
-        aspect-ratio: 1 / 1;
         border-radius: 50%;
         border: 2px solid v.$ufo-green;
-      }
-      .about__links {
-        position: absolute;
-        @include centerFlex();
-        width: 22rem;
-        gap: 2rem;
-        background: #00000087;
-        backdrop-filter: blur(20px);
-        padding: 0.4rem 0.6rem;
-        border-radius: 16px;
-        font-size: 1.7rem;
-        .about__iconify {
-          color: v.$ufo-green;
-        }
-      }
-      .about__links--email {
-        top: 34%;
-        left: 68%;
-      }
-      .about__links--cv {
-        top: 50%;
-        left: 85%;
+        overflow: hidden;
+      .profile__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        aspect-ratio: 1 / 1;
       }
     }
+  }
     .about__content{
       max-width: 532px;
       p{
         font-size: 1.6rem;
+        white-space: pre-line;
       }
     }
   }
