--- a/src/components/organisms/Hero/Hero.astro
+++ b/src/components/organisms/Hero/Hero.astro
@@ -1,4 +1,5 @@
 ---
+import BackgroundIconsFloat from "@src/components/atoms/BackgroundIconsFloat/BackgroundIconsFloat.astro";
 import ProfilePicture from "@src/components/atoms/ProfilePicture/ProfilePicture.astro";
 import SocialIcons from "@src/components/atoms/SocialIcons/SocialIcons.astro";
 import { userData as data } from "@src/data/userData";
@@ -7,9 +8,10 @@ import { userData as data } from "@src/data/userData";
 
 
 <section class="hero">
+  <BackgroundIconsFloat/>
   <div class="hero__container">
     <div class="hero__content">
-      <h1 class="hero__title">Hi! I'm {data.name}<span>{data.lastName}</span>🦝</h1>
+      <h1 class="hero__title">Hi! I'm {data.name}<span class="span__blink">{data.lastName}</span></h1>
       <div class="text__container">
         <p class="hero__slogan">≥{data.sloganHero1}</p>
       </div>
