--- a/src/components/organisms/About/About.astro
+++ b/src/components/organisms/About/About.astro
@@ -1,7 +1,8 @@
 ---
 import { userData as data } from "@src/data/userData";
 import Title from "@atoms/Title/Title";
-import ButtonAbout from "@atoms/ButtonAbout/ButtonAbout.astro"
+import ButtonAbout from "@atoms/ButtonAbout/ButtonAbout.astro";
+import Calendar from "@src/components/molecules/GithubCalendar/Calendar";
 ---
 
 <section class="about" id="about">
@@ -24,4 +25,7 @@ import ButtonAbout from "@atoms/ButtonAbout/ButtonAbout.astro"
       <p>{data.about}</p>
     </div>
   </article>
+  <Calendar  client:only/>
+
+
 </section>
