--- a/src/components/organisms/About/_about.scss
+++ b/src/components/organisms/About/_about.scss
@@ -1,31 +1,52 @@
 .about {
   width: 100%;
   min-height: 100dvh;
+
+  padding: 0 0 2rem 0;
   @include centerFlex();
+  flex-direction: column;
   color: v.$mainColor;
   .about__container {
     max-width: 1300px;
     width: 100%;
     @include centerFlex(space-around);
+    @include respond-to("medium") {
+      flex-direction: column;
+      gap: 3rem;
+      padding: 0 2rem;
+    }
     .about__profile {
       position: relative;
-      .profile__box{
+
+      @media screen and (max-width: 1194px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+      }
+
+      .profile__box {
         width: 37.9rem;
         height: 37.9rem;
         border-radius: 50%;
         border: 2px solid v.$ufo-green;
         overflow: hidden;
-      .profile__img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        aspect-ratio: 1 / 1;
+        @include respond-to("medium") {
+          width: 100%;
+          height: 100%;
+          max-width: 25rem;
+        }
+        .profile__img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          aspect-ratio: 1 / 1;
+        }
       }
     }
-  }
-    .about__content{
+    .about__content {
       max-width: 532px;
-      p{
+      p {
         font-size: 1.6rem;
         white-space: pre-line;
       }
