--- a/src/components/atoms/DividerBottom/_divider-bottom.scss
+++ b/src/components/atoms/DividerBottom/_divider-bottom.scss
@@ -5,7 +5,7 @@
 .wrapper{
     position: relative;
     z-index: 40;
-    min-height: 7dvh;
+    min-height: 25dvh;
 }
 .custom-shape-divider-bottom-1723178641 {
     position: absolute;
@@ -32,6 +32,9 @@
 }
 .custom-shape-divider-bottom-1723178641 .shape-fill-2 {
     fill: #0E0E0E;
+}
+.custom-shape-divider-bottom-1723178641 .shape-fill-3 {
+    fill: v.$cetacean-purple;
 }
 
 
