--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,9 @@
 @import "@atoms/ButtonAbout/button-about";
 @import "@molecules/GithubCalendar/github-calendar";
 @import "@organisms/Hero/hero";
+@import "@organisms/Skills/skills";
 @import "@atoms/DividerBottom/divider-bottom";
+@import "@atoms/DividerTop/divider-top";
 @import "@atoms/YearButton/year-button";
 @import "@organisms/About/about";
 @import "@layouts/BackgroundGradient/background-gradient";
