--- a/src/components/atoms/ProfilePicture/ProfilePicture.astro
+++ b/src/components/atoms/ProfilePicture/ProfilePicture.astro
@@ -21,7 +21,7 @@ import { userData as data } from "@src/data/userData";
             )
         }
   </button>
-  <div class="skills">
+  <div class="hero__skills">
       <!-- Iconos rendered by a template string -->
     </div>
 </div>
