--- a/src/components/atoms/DividerBottom/_divider-bottom.scss
+++ b/src/components/atoms/DividerBottom/_divider-bottom.scss
@@ -5,7 +5,7 @@
 .wrapper{
     position: relative;
     z-index: 40;
-    min-height: 25dvh;
+    padding-block: 10rem;
 }
 .custom-shape-divider-bottom-1723178641 {
     position: absolute;
