--- a/src/components/organisms/About/_about.scss
+++ b/src/components/organisms/About/_about.scss
@@ -1,6 +1,6 @@
 .about {
   width: 100%;
-  padding-block: 75px;
+  padding-block: 20rem;
   writing-mode: horizontal-tb;
   @include centerFlex();
   flex-direction: column;
