--- a/src/components/organisms/Skills/Skills.astro
+++ b/src/components/organisms/Skills/Skills.astro
@@ -1,29 +1,41 @@
 ---
 import Title from "@src/components/atoms/Title/Title";
-import { userData as data} from "@src/data/userData";
+import { userData as data } from "@src/data/userData";
 import CarrouselSkills from "@src/components/molecules/CarouselSkills/CarrouselSkills.astro";
 import CarouselTools from "@src/components/molecules/CarouselTools/CarouselTools.astro";
 import CardTerminal from "@molecules/CardTerminal/cardTerminal.astro";
-
 ---
 
 <section class="skills" id="skills">
-    <div class="skills__container">
-        <div class="skills__info">
-            <div class="skills__textos">
-                <Title titleDesc="Skills"  clase="title-dark" />
-                <p class="skills__description">{data.about}</p>
-            </div>
-            <CardTerminal>
-                <p>Holi</p>
-            </CardTerminal>
-            <img src="../img/funkoSofi.png" alt=`avatar funko of ${data.userName}` >
-        </div>
-        <CarrouselSkills/>
-        <div class="skills__carousel--tools">
-            <Title titleDesc="Tools"  clase="title-dark" />
-            <CarouselTools/>
-
-        </div>
+  <div class="skills__container">
+    <div class="skills__info">
+      <div class="skills__textos">
+        <Title titleDesc="Skills" clase="title-dark" />
+        <p class="skills__description">
+          {data.aboutSkills.intro}
+        </p>
+        <h5 class="skills__description skills__description--subtitle">{data.aboutSkills.highlighted}</h5>
+        <p class="skills__description">
+          {data.aboutSkills.continuation}
+        </p>
+      </div>
+      <div class="skills__avatar__container">
+        <img
+          class="skills__avatar"
+          src="../img/funkoSofi.png"
+          alt={`avatar funko of ${data.userName}`}
+        />
+        <CardTerminal clase="skills__terminal">
+          <p class="skills__terminal__content">
+            {data.aboutSkills.continuation}
+          </p>
+        </CardTerminal>
+      </div>
     </div>
+    <CarrouselSkills />
+    <div class="skills__carousel--tools">
+      <Title titleDesc="Tools" clase="title-dark" />
+      <CarouselTools />
+    </div>
+  </div>
 </section>
