--- a/src/components/organisms/About/_about.scss
+++ b/src/components/organisms/About/_about.scss
@@ -45,9 +45,16 @@
     }
     .about__content {
       max-width: 532px;
-      p {
+      .about__description {
         font-size: 1.6rem;
+        margin-bottom: 1rem;
         white-space: pre-line;
+      }
+      .about__highlighted{
+        font-size: 1.8rem;
+        @include text-gradient("dark");
+        font-weight: bold;
+        margin-bottom: 1rem;
       }
     }
   }
